# rrclone

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.yaml.tmpl  default.nix  shell.nix
.chglog/: config.yml
src/: config.rs  main.rs  rclone.rs  utils.rs
