[package]
name = "rrclone"
version = "0.0.1"
authors = ["Vehbi Sinan Tunalioglu <vst@vsthost.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
chrono = "0.4"
